--- a/pkg/userdata/centos/testdata/kubelet-v1.12-aws.yaml
+++ b/pkg/userdata/centos/testdata/kubelet-v1.12-aws.yaml
@@ -148,6 +148,7 @@ write_files:
       --cloud-provider=aws \
       --cloud-config=/etc/kubernetes/cloud-config \
       --read-only-port=0 \
+      --dynamic-config-dir /etc/kubernetes/dynamic-config-dir \
       --exit-on-lock-contention \
       --lock-file=/tmp/kubelet.lock \
       --anonymous-auth=false \
