--- a/pkg/userdata/coreos/testdata/v1.12.0-vsphere-overwrite-cloudconfig.yaml
+++ b/pkg/userdata/coreos/testdata/v1.12.0-vsphere-overwrite-cloudconfig.yaml
@@ -135,6 +135,7 @@ systemd:
           --cloud-config=/etc/kubernetes/cloud-config \
           --hostname-override=node1 \
           --read-only-port=0 \
+          --dynamic-config-dir /etc/kubernetes/dynamic-config-dir \
           --exit-on-lock-contention \
           --lock-file=/tmp/kubelet.lock \
           --anonymous-auth=false \
