--- a/pkg/userdata/coreos/testdata/v1.9.2-disable-auto-update-aws-external.yaml
+++ b/pkg/userdata/coreos/testdata/v1.9.2-disable-auto-update-aws-external.yaml
@@ -118,6 +118,7 @@ systemd:
           --authentication-token-webhook=true \
           --cloud-provider=external \
           --read-only-port=0 \
+          --dynamic-config-dir /etc/kubernetes/dynamic-config-dir \
           --exit-on-lock-contention \
           --lock-file=/tmp/kubelet.lock \
           --anonymous-auth=false \
