--- a/test/e2e/provisioning/testdata/machinedeployment-aws-ebs-encryption-enabled.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-aws-ebs-encryption-enabled.yaml
@@ -33,7 +33,7 @@ spec:
             instanceProfile: "kubernetes-v1"
             diskSize: 50
             diskType: "gp2"
-            ebsVolumeEncrypted: false
+            ebsVolumeEncrypted: true
             securityGroupIDs:
             - "sg-a2c195ca"
             tags:
