--- a/pkg/userdata/ubuntu/testdata/dist-upgrade-on-boot.yaml
+++ b/pkg/userdata/ubuntu/testdata/dist-upgrade-on-boot.yaml
@@ -129,8 +129,6 @@ write_files:
     systemctl mask ufw
     systemctl restart systemd-modules-load.service
     sysctl --system
-    # Update grub to include kernel command options to enable swap accounting. A reboot is still required to enable it.
-    update-grub
 
     apt-key add /opt/docker.asc
     apt-get update
@@ -163,8 +161,12 @@ write_files:
     apt-mark hold docker.io || true
     apt-mark hold docker-ce || true
     DEBIAN_FRONTEND=noninteractive apt-get -o Dpkg::Options::="--force-confdef" -o Dpkg::Options::="--force-confold" dist-upgrade -y
-    if [[ -e /var/run/reboot-required ]]; then
-      reboot
+
+    # Update grub to include kernel command options to enable swap accounting.
+    if grep -v -q swapaccount=1 /proc/cmdline
+    then
+      update-grub
+      touch /var/run/reboot-required
     fi
 
     mkdir -p /opt/bin/
@@ -369,3 +371,7 @@ write_files:
 
 runcmd:
 - systemctl enable --now setup.service
+
+power_state:
+    mode: reboot
+    condition: test -f /var/run/reboot-required
