Don't use cloud-init power-state-change

--- a/pkg/userdata/ubuntu/testdata/dist-upgrade-on-boot.yaml
+++ b/pkg/userdata/ubuntu/testdata/dist-upgrade-on-boot.yaml
@@ -168,6 +168,9 @@ write_files:
       update-grub
       touch /var/run/reboot-required
     fi
+    if [[ -e /var/run/reboot-required ]]; then
+      reboot
+    fi
 
     mkdir -p /opt/bin/
     mkdir -p /var/lib/calico
@@ -371,7 +374,3 @@ write_files:
 
 runcmd:
 - systemctl enable --now setup.service
-
-power_state:
-    mode: reboot
-    condition: test -f /var/run/reboot-required
