--- a/pkg/userdata/ubuntu/testdata/version-1.10.10.yaml
+++ b/pkg/userdata/ubuntu/testdata/version-1.10.10.yaml
@@ -167,6 +167,9 @@ write_files:
       update-grub
       touch /var/run/reboot-required
     fi
+    if [[ -e /var/run/reboot-required ]]; then
+      reboot
+    fi
 
     mkdir -p /opt/bin/
     mkdir -p /var/lib/calico
@@ -370,7 +373,3 @@ write_files:
 
 runcmd:
 - systemctl enable --now setup.service
-
-power_state:
-    mode: reboot
-    condition: test -f /var/run/reboot-required
