--- a/pkg/userdata/ubuntu/testdata/vsphere-mirrors.yaml
+++ b/pkg/userdata/ubuntu/testdata/vsphere-mirrors.yaml
@@ -177,6 +177,9 @@ write_files:
       update-grub
       touch /var/run/reboot-required
     fi
+    if [[ -e /var/run/reboot-required ]]; then
+      reboot
+    fi
 
     mkdir -p /opt/bin/
     mkdir -p /var/lib/calico
@@ -385,7 +388,3 @@ write_files:
 
 runcmd:
 - systemctl enable --now setup.service
-
-power_state:
-    mode: reboot
-    condition: test -f /var/run/reboot-required
