--- a/pkg/userdata/coreos/testdata/auto-update-openstack-kubelet-v-version-prefix.yaml
+++ b/pkg/userdata/coreos/testdata/auto-update-openstack-kubelet-v-version-prefix.yaml
@@ -100,32 +100,20 @@ systemd:
         ExecStartPre=/bin/bash /opt/load-kernel-modules.sh
         ExecStart=/usr/lib/coreos/kubelet-wrapper \
           --bootstrap-kubeconfig=/etc/kubernetes/bootstrap-kubelet.conf \
-          --kubeconfig=/etc/kubernetes/kubelet.conf \
-          --pod-manifest-path=/etc/kubernetes/manifests \
+          --kubeconfig=/var/lib/kubelet/kubeconfig \
+          --config=/etc/kubernetes/kubelet.conf \
           --allow-privileged=true \
           --network-plugin=cni \
           --cni-conf-dir=/etc/cni/net.d \
           --cni-bin-dir=/opt/cni/bin \
-          --authorization-mode=Webhook \
-          --client-ca-file=/etc/kubernetes/pki/ca.crt \
           --cadvisor-port=0 \
-          --rotate-certificates=true \
           --cert-dir=/etc/kubernetes/pki \
-          --authentication-token-webhook=true \
           --cloud-provider=openstack \
           --cloud-config=/etc/kubernetes/cloud-config \
           --hostname-override=node1 \
-          --read-only-port=0 \
           --dynamic-config-dir /etc/kubernetes/dynamic-config-dir \
           --exit-on-lock-contention \
-          --lock-file=/tmp/kubelet.lock \
-          --anonymous-auth=false \
-          --protect-kernel-defaults=true \
-          --cluster-dns=10.10.10.10 \
-          --cluster-domain=cluster.local \
-          --kube-reserved=cpu=100m,memory=100Mi,ephemeral-storage=1Gi \
-          --system-reserved=cpu=100m,memory=100Mi,ephemeral-storage=1Gi \
-          --cgroup-driver=systemd
+          --lock-file=/tmp/kubelet.lock
         ExecStop=-/usr/bin/rkt stop --uuid-file=/var/cache/kubelet-pod.uuid
         Restart=always
         RestartSec=10
@@ -206,6 +194,43 @@ storage:
       contents:
         inline: |
           1
+
+    - path: "/etc/kubernetes/kubelet.conf"
+      filesystem: root
+      mode: 0644
+      contents:
+        inline: |
+          kind: KubeletConfiguration
+          apiVersion: kubelet.config.k8s.io/v1beta1
+          cgroupDriver: systemd
+          clusterDomain: cluster.local
+          clusterDNS:
+          {{- range .DNSIPs }}
+            - "{{ . }}"
+          {{- end }}
+          rotateCertificates: true
+          podManifestPath: /etc/kubernetes/manifests
+          readOnlyPort: 0
+          systemReserved:
+            cpu: 500m
+            memory: 500Mi
+          kubeReserved:
+            cpu: 500m
+            memory: 500Mi
+          featureGates:
+            RotateKubeletServerCertificate: true
+          serverTLSBootstrap: true
+          rotateCertificates: true
+          authorization:
+            mode: Webhook
+          authentication:
+            x509:
+              clientCAFile: /etc/kubernetes/pki/ca.crt
+            webhook:
+              enabled: true
+            anonymous:
+              enabled: false
+          protectKernelDefaults: true
 
     - path: /etc/kubernetes/bootstrap-kubelet.conf
       filesystem: root
