--- a/pkg/userdata/coreos/testdata/v1.15.0-vsphere.yaml
+++ b/pkg/userdata/coreos/testdata/v1.15.0-vsphere.yaml
@@ -98,30 +98,20 @@ systemd:
         ExecStartPre=/bin/bash /opt/load-kernel-modules.sh
         ExecStart=/usr/lib/coreos/kubelet-wrapper \
           --bootstrap-kubeconfig=/etc/kubernetes/bootstrap-kubelet.conf \
-          --kubeconfig=/etc/kubernetes/kubelet.conf \
-          --pod-manifest-path=/etc/kubernetes/manifests \
+          --kubeconfig=/var/lib/kubelet/kubeconfig \
+          --config=/etc/kubernetes/kubelet.conf \
+          --allow-privileged=true \
           --network-plugin=cni \
           --cni-conf-dir=/etc/cni/net.d \
           --cni-bin-dir=/opt/cni/bin \
-          --authorization-mode=Webhook \
-          --client-ca-file=/etc/kubernetes/pki/ca.crt \
-          --rotate-certificates=true \
+          --cadvisor-port=0 \
           --cert-dir=/etc/kubernetes/pki \
-          --authentication-token-webhook=true \
-          --cloud-provider=vsphere \
+          --cloud-provider=openstack \
           --cloud-config=/etc/kubernetes/cloud-config \
           --hostname-override=node1 \
-          --read-only-port=0 \
           --dynamic-config-dir /etc/kubernetes/dynamic-config-dir \
           --exit-on-lock-contention \
-          --lock-file=/tmp/kubelet.lock \
-          --anonymous-auth=false \
-          --protect-kernel-defaults=true \
-          --cluster-dns=10.10.10.10 \
-          --cluster-domain=cluster.local \
-          --kube-reserved=cpu=100m,memory=100Mi,ephemeral-storage=1Gi \
-          --system-reserved=cpu=100m,memory=100Mi,ephemeral-storage=1Gi \
-          --cgroup-driver=systemd
+          --lock-file=/tmp/kubelet.lock
         ExecStop=-/usr/bin/rkt stop --uuid-file=/var/cache/kubelet-pod.uuid
         Restart=always
         RestartSec=10
