--- a/pkg/userdata/sles/testdata/vsphere-proxy.yaml
+++ b/pkg/userdata/sles/testdata/vsphere-proxy.yaml
@@ -131,33 +131,21 @@ write_files:
     ExecStartPre=/bin/bash /opt/load-kernel-modules.sh
     ExecStart=/opt/bin/kubelet $KUBELET_EXTRA_ARGS \
       --bootstrap-kubeconfig=/etc/kubernetes/bootstrap-kubelet.conf \
-      --kubeconfig=/etc/kubernetes/kubelet.conf \
-      --pod-manifest-path=/etc/kubernetes/manifests \
+      --kubeconfig=/var/lib/kubelet/kubeconfig \
+      --config=/etc/kubernetes/kubelet.conf \
       --allow-privileged=true \
       --network-plugin=cni \
       --cni-conf-dir=/etc/cni/net.d \
       --cni-bin-dir=/opt/cni/bin \
-      --authorization-mode=Webhook \
-      --client-ca-file=/etc/kubernetes/pki/ca.crt \
       --cadvisor-port=0 \
-      --rotate-certificates=true \
       --cert-dir=/etc/kubernetes/pki \
-      --authentication-token-webhook=true \
       --cloud-provider=vsphere \
       --cloud-config=/etc/kubernetes/cloud-config \
       --hostname-override=node1 \
-      --read-only-port=0 \
       --dynamic-config-dir /etc/kubernetes/dynamic-config-dir \
       --exit-on-lock-contention \
       --lock-file=/tmp/kubelet.lock \
-      --anonymous-auth=false \
-      --protect-kernel-defaults=true \
-      --cluster-dns=10.10.10.10 \
-      --cluster-domain=cluster.local \
-      --pod-infra-container-image=192.168.100.100:5000/kubernetes/pause:v3.1 \
-      --kube-reserved=cpu=100m,memory=100Mi,ephemeral-storage=1Gi \
-      --system-reserved=cpu=100m,memory=100Mi,ephemeral-storage=1Gi \
-      --cgroup-driver=systemd
+      --pod-infra-container-image=192.168.100.100:5000/kubernetes/pause:v3.1
 
     [Install]
     WantedBy=multi-user.target
