--- a/pkg/userdata/ubuntu/testdata/multiple-dns-servers.yaml
+++ b/pkg/userdata/ubuntu/testdata/multiple-dns-servers.yaml
@@ -213,30 +213,19 @@ write_files:
     ExecStartPre=/bin/bash /opt/load-kernel-modules.sh
     ExecStart=/opt/bin/kubelet $KUBELET_EXTRA_ARGS \
       --bootstrap-kubeconfig=/etc/kubernetes/bootstrap-kubelet.conf \
-      --kubeconfig=/etc/kubernetes/kubelet.conf \
-      --pod-manifest-path=/etc/kubernetes/manifests \
+      --kubeconfig=/var/lib/kubelet/kubeconfig \
+      --config=/etc/kubernetes/kubelet.conf \
       --allow-privileged=true \
       --network-plugin=cni \
       --cni-conf-dir=/etc/cni/net.d \
       --cni-bin-dir=/opt/cni/bin \
-      --authorization-mode=Webhook \
-      --client-ca-file=/etc/kubernetes/pki/ca.crt \
       --cadvisor-port=0 \
-      --rotate-certificates=true \
       --cert-dir=/etc/kubernetes/pki \
-      --authentication-token-webhook=true \
       --hostname-override=node1 \
-      --read-only-port=0 \
       --dynamic-config-dir /etc/kubernetes/dynamic-config-dir \
       --exit-on-lock-contention \
       --lock-file=/tmp/kubelet.lock \
-      --anonymous-auth=false \
-      --protect-kernel-defaults=true \
-      --cluster-dns=10.10.10.10,10.10.10.11,10.10.10.12 \
-      --cluster-domain=cluster.local \
-      --kube-reserved=cpu=100m,memory=100Mi,ephemeral-storage=1Gi \
-      --system-reserved=cpu=100m,memory=100Mi,ephemeral-storage=1Gi \
-      --cgroup-driver=systemd
+      --pod-infra-container-image=
 
     [Install]
     WantedBy=multi-user.target
@@ -319,6 +308,40 @@ write_files:
   permissions: "0644"
   content: |
     export PATH="/opt/bin:$PATH"
+
+- path: "/etc/kubernetes/kubelet.conf"
+  content: |
+    kind: KubeletConfiguration
+    apiVersion: kubelet.config.k8s.io/v1beta1
+    cgroupDriver: systemd
+    clusterDomain: cluster.local
+    clusterDNS:
+      - "10.10.10.10"
+      - "10.10.10.11"
+      - "10.10.10.12"    
+    rotateCertificates: true
+    podManifestPath: /etc/kubernetes/manifests
+    readOnlyPort: 0
+    systemReserved:
+      cpu: 500m
+      memory: 500Mi
+    kubeReserved:
+      cpu: 500m
+      memory: 500Mi
+    featureGates:
+      RotateKubeletServerCertificate: true
+    serverTLSBootstrap: true
+    rotateCertificates: true
+    authorization:
+      mode: Webhook
+    authentication:
+      x509:
+        clientCAFile: /etc/kubernetes/pki/ca.crt
+      webhook: 
+        enabled: true
+      anonymous:
+        enabled: false
+    protectKernelDefaults: true
 
 - path: /etc/docker/daemon.json
   permissions: "0644"
