--- a/pkg/userdata/centos/testdata/kubelet-v1.12-aws.yaml
+++ b/pkg/userdata/centos/testdata/kubelet-v1.12-aws.yaml
@@ -145,7 +145,9 @@ write_files:
       --cloud-config=/etc/kubernetes/cloud-config \
       --dynamic-config-dir /etc/kubernetes/dynamic-config-dir \
       --exit-on-lock-contention \
-      --lock-file=/tmp/kubelet.lock
+      --lock-file=/tmp/kubelet.lock \
+      --kube-reserved=cpu=100m,memory=100Mi,ephemeral-storage=1Gi \
+      --system-reserved=cpu=100m,memory=100Mi,ephemeral-storage=1Gi
 
     [Install]
     WantedBy=multi-user.target
@@ -184,12 +186,6 @@ write_files:
     rotateCertificates: true
     podManifestPath: /etc/kubernetes/manifests
     readOnlyPort: 0
-    systemReserved:
-      cpu: 500m
-      memory: 500Mi
-    kubeReserved:
-      cpu: 500m
-      memory: 500Mi
     featureGates:
       RotateKubeletServerCertificate: true
     serverTLSBootstrap: true
