--- a/pkg/userdata/sles/testdata/vsphere.yaml
+++ b/pkg/userdata/sles/testdata/vsphere.yaml
@@ -135,7 +135,9 @@ write_files:
       --hostname-override=node1 \
       --dynamic-config-dir /etc/kubernetes/dynamic-config-dir \
       --exit-on-lock-contention \
-      --lock-file=/tmp/kubelet.lock
+      --lock-file=/tmp/kubelet.lock \
+      --kube-reserved=cpu=100m,memory=100Mi,ephemeral-storage=1Gi \
+      --system-reserved=cpu=100m,memory=100Mi,ephemeral-storage=1Gi
 
     [Install]
     WantedBy=multi-user.target
