refactoring the cgroupdriver string Signed-off-by: Moath Qasim <moad.qassem@gmail.com>
Signed-off-by: Moath Qasim <moad.qassem@gmail.com>

--- a/pkg/userdata/sles/testdata/multiple-ssh-keys.yaml
+++ b/pkg/userdata/sles/testdata/multiple-ssh-keys.yaml
@@ -87,7 +87,7 @@ write_files:
     fi
 
 
-    sed -i 's/systemd/cgroupfs/g' /etc/docker/daemon.json
+    sed -i 's/cgroupdriver=systemd/cgroupdriver=cgroupfs/g' /etc/docker/daemon.json
     systemctl enable --now docker
     systemctl enable --now kubelet
     systemctl enable --now --no-block kubelet-healthcheck.service
