--- a/.prow.yaml
+++ b/.prow.yaml
@@ -45,7 +45,7 @@ presubmits:
               cpu: 500m
 
   - name: pull-machine-controller-e2e-vsphere-datastore-cluster
-    always_run: true
+    always_run: false
     decorate: true
     error_on_eviction: true
     clone_uri: 'ssh://git@github.com/kubermatic/machine-controller.git'
