customising vsphere disk size
Signed-off-by: Moath Qasim <moad.qassem@gmail.com>

--- a/test/e2e/provisioning/testdata/machinedeployment-vsphere.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-vsphere.yaml
@@ -35,7 +35,7 @@ spec:
             datastore: exsi-nas
             cpus: 2
             MemoryMB: 2048
-            diskSizeGB: 50
+            diskSizeGB: << DISK_SIZE >>
             rhsmOfflineToken: "<< REDHAT_SUBSCRIPTIONS_OFFLINE_TOKEN >>"
           operatingSystem: "<< OS_NAME >>"
           operatingSystemSpec:
