--- a/test/e2e/provisioning/testdata/machinedeployment-vsphere-datastore-cluster.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-vsphere-datastore-cluster.yaml
@@ -35,7 +35,7 @@ spec:
             datastoreCluster: 'dsc-1'
             cpus: 2
             MemoryMB: 2048
-            diskSizeGB: 50
+            diskSizeGB: << DISK_SIZE >>
             rhsmOfflineToken: "<< REDHAT_SUBSCRIPTIONS_OFFLINE_TOKEN >>"
           operatingSystem: "<< OS_NAME >>"
           operatingSystemSpec:
