Add disk type and size to alicloud (#683)
* fix CentOs Image and support disk type and size customisation

Signed-off-by: Moath Qasim <moad.qassem@gmail.com>

* updating fixtures

Signed-off-by: Moath Qasim <moad.qassem@gmail.com>

* adding diskType and diskSize
Signed-off-by: Moath Qasim <moad.qassem@gmail.com>

Signed-off-by: Moath Qasim <moad.qassem@gmail.com>

* addressing PR reviews
Signed-off-by: Moath Qasim <moad.qassem@gmail.com>

Signed-off-by: Moath Qasim <moad.qassem@gmail.com>

--- a/test/e2e/provisioning/testdata/machinedeployment-alibaba.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-alibaba.yaml
@@ -26,12 +26,14 @@ spec:
           cloudProviderSpec:
             accessKeyID: << ALIBABA_ACCESS_KEY_ID >>
             accessKeySecret: << ALIBABA_ACCESS_KEY_SECRET >>
-            instanceType: "ecs.sn1ne.large"
+            instanceType: "ecs.c6.large"
             instanceName: "alibaba-instance"
             regionID: eu-central-1
             vSwitchID: "vsw-gw8g8mn4ohmj483hsylmn"
             internetMaxBandwidthOut: 10
             zoneID: eu-central-1a
+            diskType: "cloud_efficiency"
+            diskSize: "40"
           operatingSystem: "<< OS_NAME >>"
           operatingSystemSpec:
             distUpgradeOnBoot: false
