add rhel support to the gcp cloud provider (#703)
* add rhel support to the gcp cloud provider
Signed-off-by: Moath Qasim <moad.qassem@gmail.com>

Signed-off-by: Moath Qasim <moad.qassem@gmail.com>

* enable rhel presets for gce
Signed-off-by: Moath Qasim <moad.qassem@gmail.com>

Signed-off-by: Moath Qasim <moad.qassem@gmail.com>

--- a/.prow.yaml
+++ b/.prow.yaml
@@ -245,6 +245,7 @@ presubmits:
       preset-gce: "true"
       preset-hetzner: "true"
       preset-e2e-ssh: "true"
+      preset-rhel: "true"
     spec:
       containers:
         - image: golang:1.13.8
