--- a/examples/gce-machinedeployment.yaml
+++ b/examples/gce-machinedeployment.yaml
@@ -62,7 +62,8 @@ spec:
               "kubernetes_cluster": "my-cluster"
             # Whether to assign a public IP Address. Required for Internet access
             assignPublicIPAddress: true
-          # Can be 'ubuntu' or 'coreos'
+            customImage: "myCustomImage"
+          # Can be 'ubuntu' 'rhel' or 'coreos'
           operatingSystem: "coreos"
           operatingSystemSpec:
             disableAutoUpdate: true
