--- a/examples/aws-machinedeployment.yaml
+++ b/examples/aws-machinedeployment.yaml
@@ -59,16 +59,18 @@ spec:
             diskSize: 50
             diskType: "gp2"
             ebsVolumeEncrypted: false
+            ami: "my-custom-ami"
             ## Only application if diskType = io1
             diskIops: 500
             # Assign a public IP to this instance. Default: true
             assignPublicIP: false
             tags:
               "KubernetesCluster": "6qsm86c2d"
-          # Can be 'ubuntu', 'coreos' ,'centos' or 'sles'
+          # Can be 'ubuntu', 'coreos' ,'centos', `rhel` or 'sles'
           operatingSystem: "coreos"
           operatingSystemSpec:
             disableAutoUpdate: true
+            distUpgradeOnBoot: false
             # 'rhelSubscriptionManagerUser' is only used for rhel os and can be set via env var `RHEL_SUBSCRIPTION_MANAGER_USER`
             rhelSubscriptionManagerUser: "<< RHEL_SUBSCRIPTION_MANAGER_USER >>"
             # 'rhelSubscriptionManagerPassword' is only used for rhel os and can be set via env var `RHEL_SUBSCRIPTION_MANAGER_PASSWORD`
