Add spot instance flag
And missing boolean flag of https://github.com/kubermatic/machine-controller/blob/master/pkg/cloudprovider/provider/aws/types/types.go#L33

--- a/examples/aws-machinedeployment.yaml
+++ b/examples/aws-machinedeployment.yaml
@@ -56,6 +56,7 @@ spec:
             subnetId: "subnet-2bff4f43"
             instanceType: "t2.micro"
             instanceProfile: "kubernetes-v1"
+            isSpotInstance: false
             diskSize: 50
             diskType: "gp2"
             ebsVolumeEncrypted: false
