Add prow job for vsphere resource pool provisioning

--- a/.prow.yaml
+++ b/.prow.yaml
@@ -484,6 +484,28 @@ presubmits:
               memory: 1Gi
               cpu: 500m
 
+  - name: pull-machine-controller-e2e-vsphere-resource-pool
+    always_run: true
+    decorate: true
+    error_on_eviction: true
+    clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
+    labels:
+      preset-vsphere: "true"
+      preset-rhel: "true"
+      preset-hetzner: "true"
+      preset-e2e-ssh: "true"
+    spec:
+      containers:
+        - image: golang:1.13.8
+          command:
+            - "./hack/ci-e2e-test.sh"
+          args:
+            - "TestVsphereResourcePoolProvisioningE2E"
+          resources:
+            requests:
+              memory: 1Gi
+              cpu: 500m
+
 postsubmits:
   - name: ci-push-machine-controller-image
     always_run: true
