--- a/pkg/userdata/coreos/testdata/v1.17.0-vsphere-proxy.yaml
+++ b/pkg/userdata/coreos/testdata/v1.17.0-vsphere-proxy.yaml
@@ -5,11 +5,37 @@ passwd:
         - ssh-rsa AAABBB
         - ssh-rsa CCCDDD
 
+networkd:
+  units:
+    - name: static-nic.network
+      contents: |
+        [Match]
+        # Because of difficulty predicting specific NIC names on different cloud providers,
+        # we only support static addressing on VSphere. There should be a single NIC attached
+        # that we will match by name prefix 'en' which denotes ethernet devices.
+        Name=en*
+
+        [Network]
+        DHCP=no
+        Address=192.168.81.4/24
+        Gateway=192.168.81.1
+        DNS=8.8.8.8
+
 
 systemd:
   units:
+    - name: update-engine.service
+      mask: true
+    - name: locksmithd.service
+      mask: true
     - name: docker.service
       enabled: true
+    - name: update-engine.service
+      dropins:
+        - name: 50-proxy.conf
+          contents: |
+            [Service]
+            Environment=ALL_PROXY=http://192.168.100.100:3128
 
     - name: download-healthcheck-script.service
       enabled: true
@@ -75,10 +101,10 @@ systemd:
         CPUAccounting=true
         MemoryAccounting=true
         EnvironmentFile=-/etc/environment
-        Environment=KUBELET_IMAGE=docker://k8s.gcr.io/hyperkube-amd64:v1.10.3
+        Environment=KUBELET_IMAGE=docker://192.168.100.100:5000/kubernetes/hyperkube:v1.17.0
         Environment="RKT_RUN_ARGS=--uuid-file-save=/var/cache/kubelet-pod.uuid \
           --inherit-env \
-          --insecure-options=image \
+          --insecure-options=image,http \
           --volume=resolv,kind=host,source=/etc/resolv.conf \
           --mount volume=resolv,target=/etc/resolv.conf \
           --volume cni-bin,kind=host,source=/opt/cni/bin \
@@ -99,21 +125,21 @@ systemd:
         ExecStartPre=-/bin/rm -rf /var/lib/rkt/cas/tmp/
         ExecStartPre=/bin/bash /opt/load-kernel-modules.sh
         ExecStart=/usr/lib/coreos/kubelet-wrapper \
+          kubelet \
           --bootstrap-kubeconfig=/etc/kubernetes/bootstrap-kubelet.conf \
           --kubeconfig=/var/lib/kubelet/kubeconfig \
           --config=/etc/kubernetes/kubelet.conf \
-          --allow-privileged=true \
           --network-plugin=cni \
           --cni-conf-dir=/etc/cni/net.d \
           --cni-bin-dir=/opt/cni/bin \
-          --cadvisor-port=0 \
           --cert-dir=/etc/kubernetes/pki \
-          --cloud-provider=openstack \
+          --cloud-provider=vsphere \
           --cloud-config=/etc/kubernetes/cloud-config \
           --hostname-override=node1 \
           --dynamic-config-dir=/etc/kubernetes/dynamic-config-dir \
           --exit-on-lock-contention \
           --lock-file=/tmp/kubelet.lock \
+          --pod-infra-container-image=192.168.100.100:5000/kubernetes/pause:v3.1 \
           --volume-plugin-dir=/var/lib/kubelet/volumeplugins
         ExecStop=-/usr/bin/rkt stop --uuid-file=/var/cache/kubelet-pod.uuid
         Restart=always
@@ -131,6 +157,17 @@ systemd:
 
 storage:
   files:
+    - path: /etc/environment
+      filesystem: root
+      mode: 0644
+      contents:
+        inline: |
+          HTTP_PROXY=http://192.168.100.100:3128
+          http_proxy=http://192.168.100.100:3128
+          HTTPS_PROXY=http://192.168.100.100:3128
+          https_proxy=http://192.168.100.100:3128
+          NO_PROXY=192.168.1.0
+          no_proxy=192.168.1.0
 
     - path: "/etc/systemd/journald.conf.d/max_disk_use.conf"
       filesystem: root
@@ -163,8 +200,6 @@ storage:
           cgroupDriver: systemd
           clusterDNS:
           - 10.10.10.10
-          - 10.10.10.11
-          - 10.10.10.12
           clusterDomain: cluster.local
           cpuManagerReconcilePeriod: 0s
           evictionPressureTransitionPeriod: 0s
@@ -275,7 +310,7 @@ storage:
       mode: 0400
       contents:
         inline: |
-          {openstack-config:true}
+          {vsphere-config:true}
 
     - path: /etc/kubernetes/pki/ca.crt
       filesystem: root
@@ -339,7 +374,7 @@ storage:
       mode: 0644
       contents:
         inline: |
-          {"exec-opts":["native.cgroupdriver=systemd"],"storage-driver":"overlay2","log-driver":"json-file","log-opts":{"max-size":"100m"}}
+          {"exec-opts":["native.cgroupdriver=systemd"],"storage-driver":"overlay2","log-driver":"json-file","log-opts":{"max-size":"100m"},"insecure-registries":["192.168.100.100:5000","10.0.0.1:5000"]}
 
     - path: /opt/bin/download.sh
       filesystem: root
@@ -362,7 +397,7 @@ storage:
           tar xvf "$cni_filename"
           rm -f "$cni_filename"
           cd -
-          KUBE_VERSION="${KUBE_VERSION:-v1.10.3}"
+          KUBE_VERSION="${KUBE_VERSION:-v1.17.0}"
           kube_dir="$opt_bin/kubernetes-$KUBE_VERSION"
           kube_base_url="https://storage.googleapis.com/kubernetes-release/release/$KUBE_VERSION/bin/linux/$arch"
           kube_sum_file="$kube_dir/sha256"
