--- a/pkg/userdata/coreos/testdata/v1.17.2-disable-locksmith-aws.yaml
+++ b/pkg/userdata/coreos/testdata/v1.17.2-disable-locksmith-aws.yaml
@@ -8,8 +8,6 @@ passwd:
 
 systemd:
   units:
-    - name: update-engine.service
-      mask: true
     - name: locksmithd.service
       mask: true
     - name: docker.service
@@ -79,7 +77,7 @@ systemd:
         CPUAccounting=true
         MemoryAccounting=true
         EnvironmentFile=-/etc/environment
-        Environment=KUBELET_IMAGE=docker://k8s.gcr.io/hyperkube-amd64:v1.9.2
+        Environment=KUBELET_IMAGE=docker://k8s.gcr.io/hyperkube-amd64:v1.17.2
         Environment="RKT_RUN_ARGS=--uuid-file-save=/var/cache/kubelet-pod.uuid \
           --inherit-env \
           --insecure-options=image \
@@ -103,14 +101,13 @@ systemd:
         ExecStartPre=-/bin/rm -rf /var/lib/rkt/cas/tmp/
         ExecStartPre=/bin/bash /opt/load-kernel-modules.sh
         ExecStart=/usr/lib/coreos/kubelet-wrapper \
+          kubelet \
           --bootstrap-kubeconfig=/etc/kubernetes/bootstrap-kubelet.conf \
           --kubeconfig=/var/lib/kubelet/kubeconfig \
           --config=/etc/kubernetes/kubelet.conf \
-          --allow-privileged=true \
           --network-plugin=cni \
           --cni-conf-dir=/etc/cni/net.d \
           --cni-bin-dir=/opt/cni/bin \
-          --cadvisor-port=0 \
           --cert-dir=/etc/kubernetes/pki \
           --cloud-provider=aws \
           --cloud-config=/etc/kubernetes/cloud-config \
@@ -358,7 +355,7 @@ storage:
           tar xvf "$cni_filename"
           rm -f "$cni_filename"
           cd -
-          KUBE_VERSION="${KUBE_VERSION:-v1.9.2}"
+          KUBE_VERSION="${KUBE_VERSION:-v1.17.2}"
           kube_dir="$opt_bin/kubernetes-$KUBE_VERSION"
           kube_base_url="https://storage.googleapis.com/kubernetes-release/release/$KUBE_VERSION/bin/linux/$arch"
           kube_sum_file="$kube_dir/sha256"
