--- a/pkg/userdata/coreos/testdata/v1.16.2-vsphere-static-ipconfig.yaml
+++ b/pkg/userdata/coreos/testdata/v1.16.2-vsphere-static-ipconfig.yaml
@@ -41,6 +41,7 @@ systemd:
         Type=oneshot
         EnvironmentFile=-/etc/environment
         ExecStart=/opt/bin/download.sh
+        ExecPost=systemctl daemon-reload
         [Install]
         WantedBy=multi-user.target
 
@@ -83,6 +84,22 @@ systemd:
           WantedBy=multi-user.target
 
 
+    - name: nodeip.service
+      enabled: true
+      contents: |
+        [Unit]
+        Description=Setup Kubelet Node IP Env
+        Requires=network-online.target
+        After=network-online.target
+
+        [Service]
+        ExecStart=/opt/bin/setup_net_env.sh
+        RemainAfterExit=yes
+        Type=oneshot
+        [Install]
+        WantedBy=multi-user.target
+
+
     - name: kubelet.service
       enabled: true
       contents: |
@@ -95,6 +112,7 @@ systemd:
         CPUAccounting=true
         MemoryAccounting=true
         EnvironmentFile=-/etc/environment
+        EnvironmentFile=/etc/kubernetes/nodeip.conf
         Environment=KUBELET_IMAGE=docker://k8s.gcr.io/hyperkube-amd64:v1.16.2
         Environment="RKT_RUN_ARGS=--uuid-file-save=/var/cache/kubelet-pod.uuid \
           --inherit-env \
@@ -132,7 +150,8 @@ systemd:
           --dynamic-config-dir=/etc/kubernetes/dynamic-config-dir \
           --exit-on-lock-contention \
           --lock-file=/tmp/kubelet.lock \
-          --volume-plugin-dir=/var/lib/kubelet/volumeplugins
+          --volume-plugin-dir=/var/lib/kubelet/volumeplugins \
+          --node-ip ${KUBELET_NODE_IP}
         ExecStop=-/usr/bin/rkt stop --uuid-file=/var/cache/kubelet-pod.uuid
         Restart=always
         RestartSec=10
@@ -264,6 +283,38 @@ storage:
       contents:
         inline: |
           1
+
+    - path: "/opt/bin/setup_net_env.sh"
+      filesystem: root
+      mode: 0755
+      contents:
+        inline: |
+          #!/usr/bin/env bash
+          echodate() {
+            echo "[$(date -Is)]" "$@"
+          }
+
+          # get the default interface IP address
+          DEFAULT_IFC_IP=$(ip -o  route get 1 | grep -oP "src \K\S+")
+
+          if [ -z "${DEFAULT_IFC_IP}" ]
+          then
+          	echodate "Failed to get IP address for the default route interface"
+          	exit 1
+          fi
+
+          # write the nodeip_env file
+          if grep -q coreos /etc/os-release
+          then
+            echo "KUBELET_NODE_IP=${DEFAULT_IFC_IP}" > /etc/kubernetes/nodeip.conf
+          elif [ ! -d /etc/systemd/system/kubelet.service.d ]
+          then
+          	echodate "Can't find kubelet service extras directory"
+          	exit 1
+          else
+            echo -e "[Service]\nEnvironment=\"KUBELET_NODE_IP=${DEFAULT_IFC_IP}\"" > /etc/systemd/system/kubelet.service.d/nodeip.conf
+          fi
+
 
     - path: /etc/kubernetes/bootstrap-kubelet.conf
       filesystem: root
