--- a/pkg/userdata/centos/testdata/kubelet-v1.15-aws.yaml
+++ b/pkg/userdata/centos/testdata/kubelet-v1.15-aws.yaml
@@ -371,4 +371,4 @@ write_files:
     EnvironmentFile=-/etc/environment
 
 runcmd:
-- systemctl enable --now setup.service
+- systemctl start setup.service
