--- a/test/e2e/provisioning/testdata/machinedeployment-scaleway.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-scaleway.yaml
@@ -29,6 +29,9 @@ spec:
             projectId: << SCW_DEFAULT_PROJECT_ID >>
             commercialType: "DEV1-M"
             zone: "fr-par-1"
+            tags:
+              - foo
+              - bar
           operatingSystem: "<< OS_NAME >>"
           operatingSystemSpec:
             distUpgradeOnBoot: false
